--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "jsonwebtoken": "^8.2.2",
         "mongodb": "^3.0.10",
         "mongoose": "^5.1.4",
-        "rootpath": "^0.1.2"
+        "rootpath": "^0.1.2",
+        "socket.io": "^2.2.0"
     },
     "devDependencies": {
         "nodemon": "^1.17.5"
