--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "socket.io": "^2.2.0"
     },
     "devDependencies": {
+        "dotenv": "^6.2.0",
         "nodemon": "^1.17.5"
     }
 }
